# csye7374-final

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  mutation.yml
.schemathesis/default/cache/: entries.jsonl  manifest.json
.schemathesis/default/cache/crashes/: manifest.json
app/: config.py  database.py  deps.py  main.py  models.py  rules.py  schemas.py  security.py
app/routers/: admin.py  auth.py  tasks.py  users.py
db/: init.sql
perf/: smoke.js
tests/: conftest.py  test_admin.py  test_auth.py  test_authorization.py  test_stats.py  test_tasks.py
